# agents-crash-course-project

./: .gitignore  README.md  docker-compose.yml  load.py  load_data.py  main.py  prepare_data.py  pyproject.toml  weaviate_check_readiness.py  weaviate_create_collection.py  weaviate_import.py  weaviate_query.py  weaviate_rag.py
examples/: ollama_tool_example.py  weaviate_check_readiness.py  weaviate_create_collection.py  weaviate_import.py  weaviate_query.py  weaviate_rag.py
