[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "ollama>=0.6.0",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.1",
    "weaviate-client>=4.17.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
